fix Save To Cloud dark mode

--- a/src/styles/darkmode.css
+++ b/src/styles/darkmode.css
@@ -3,20 +3,20 @@
       background-color: #2d2d2d;
       color: #fff;
     }
-  
+
     .react-resume.dark h1 {
       color: #f2bb13;
       font-weight: 1.1em;
     }
-  
+
     .react-resume.dark h2 {
       color: #f2bb13;
     }
-  
+
     .react-resume.dark hr {
       border-color: #1f1f1f;
     }
-  
+
     .react-resume.dark a {
       color: #51ffff;
     }
@@ -100,5 +100,14 @@
 
     .App.darkMode .ui.modal .content .ui.accordion.styled .title{
       color: #fff !important;
+    }
+
+    .save-to-cloud.dark.ui.modal * {
+      background: #2d2d2d !important;
+      color: #fff !important;
+    }
+
+    .save-to-cloud.dark.ui.modal * > button, .save-to-cloud.dark.ui.modal * > button * {
+      background: #1f1f1f !important;
     }
 }
